# nixos-inventree

./: .gitignore  .gitmodules  CLAUDE.md  README.md  clean_generated_nix.py  custom-overrides.nix  dev-server.sh  flake.nix  generate_missing_requirements.py  generate_package_list.py  maybe-overrides.nix  module.nix  overlay.nix  pyproject.toml  python-all-requirements.nix  python-database-requirements.nix  python-extra-requirements.nix  python-overrides.nix  python-packages.nix  python-requirements.nix  treefmt.nix  update-overrides.sh
.github/workflows/: test.yml
flake-modules/: _pyproject-overrides.nix  devshell.nix  module.nix  overlay.nix  pkgs.nix  python.nix  systems.nix  treefmt-module.nix  venv.nix
flake-modules/checks/: check-gen-secret.nix
patches/: configurable-static-i18-root.patch  disable-fs-mutation-tasks.patch  install-crispy-bootstrap4.patch  install-ext.patch  registry-ext.patch
pkgs/: cluster.nix  gen-secret.nix  invoke.nix  python.nix  refresh-db-config.nix  refresh-users.nix  refresh_db_config.py  refresh_users.py  server.nix  shell.nix  src.nix
plugin_ws/: plugin-overrides.nix  pyproject.toml
plugins/: digikey-api-v4.nix  inventree-digikey-supplier.nix  inventree-kicad-plugin.nix
