[project]
name = "nixos-inventree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.10.0",
    "async-timeout==5.0.1",
    "attrs==25.4.0",
    "babel==2.17.0",
    "bcrypt==4.3.0",
    "bleach[css]==6.2.0",
    "blessed==1.22.0",
    "boto3==1.40.55",
    "botocore==1.40.55",
    "brotli==1.1.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cryptography==44.0.3",
    "cssselect2==0.8.0",
    "defusedxml==0.7.1",
    "django==4.2.26",
    "django-allauth[mfa,openid,saml,socialaccount]==65.12.1",
    "django-anymail[amazon-ses,postal]==13.1",
    "django-cleanup==9.0.0",
    "django-cors-headers==4.9.0",
    "django-dbbackup==5.0.0",
    "django-error-report-2==0.4.2",
    "django-filter==25.1",
    "django-flags==5.0.14",
    "django-ical==1.9.2",
    "django-ipware==7.0.1",
    "django-js-asset==2.2.0",
    "django-mailbox==4.10.1",
    "django-maintenance-mode==0.22.0",
    "django-markdownify==0.9.5",
    "django-money==3.5.4",
    "django-mptt==0.18.0",
    "django-oauth-toolkit==3.1.0",
    "django-otp==1.3.0",
    "django-picklefield==3.3",
    "django-q-sentry==0.1.6",
    "django-q2==1.8.0",
    "django-recurrence==1.11.1",
    "django-redis==6.0.0",
    "django-sesame==3.2.3",
    "django-sql-utils==0.7.0",
    "django-sslserver==0.22",
    "django-stdimage==6.0.2",
    "django-storages[s3,sftp]==1.14.6",
    "django-structlog==9.1.1",
    "django-taggit==6.1.0",
    "django-xforwardedfor-middleware==2.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt[crypto]==5.5.1",
    "docutils==0.22.2",
    "drf-spectacular==0.28.0",
    "dulwich==0.24.1",
    "et-xmlfile==2.0.0",
    "feedparser==6.0.12",
    "fido2==1.2.0",
    "flexcache==0.3",
    "flexparser==0.4",
    "fonttools[woff]==4.60.1",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.76.0",
    "gunicorn==23.0.0",
    "icalendar==6.3.1",
    "idna==3.11",
    "importlib-metadata==8.7.0",
    "inflection==0.5.1",
    "invoke==2.2.1",
    "isodate==0.7.2",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jwcrypto==1.5.6",
    "lxml==6.0.2",
    "markdown==3.9",
    "markupsafe==3.0.3",
    "oauthlib==3.3.1",
    "openpyxl==3.1.5",
    "opentelemetry-api==1.38.0",
    "opentelemetry-exporter-otlp==1.38.0",
    "opentelemetry-exporter-otlp-proto-common==1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.38.0",
    "opentelemetry-exporter-otlp-proto-http==1.38.0",
    "opentelemetry-instrumentation==0.59b0",
    "opentelemetry-instrumentation-dbapi==0.59b0",
    "opentelemetry-instrumentation-django==0.59b0",
    "opentelemetry-instrumentation-psycopg==0.59b0",
    "opentelemetry-instrumentation-pymysql==0.59b0",
    "opentelemetry-instrumentation-redis==0.59b0",
    "opentelemetry-instrumentation-requests==0.59b0",
    "opentelemetry-instrumentation-sqlite3==0.59b0",
    "opentelemetry-instrumentation-system-metrics==0.59b0",
    "opentelemetry-instrumentation-wsgi==0.59b0",
    "opentelemetry-proto==1.38.0",
    "opentelemetry-sdk==1.38.0",
    "opentelemetry-semantic-conventions==0.59b0",
    "opentelemetry-util-http==0.59b0",
    "packaging==25.0",
    "paramiko==4.0.0",
    "pdf2image==1.17.0",
    "pillow==11.3.0",
    "pint==0.24.4",
    "pip>=25.3",
    "pip-licenses==5.5.0",
    "platformdirs==4.4.0",
    "ppf-datamatrix==0.2",
    "prettytable==3.16.0",
    "protobuf==6.33.0",
    "psutil==7.1.0",
    "py-moneyed==3.0",
    "pycparser==2.23",
    "pydyf==0.11.0",
    "pyjwt[crypto]==2.10.1",
    "pynacl==1.6.0",
    "pypdf==6.1.3",
    "pyphen==0.17.2",
    "python-barcode[images]==0.16.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-fsutil==0.15.0",
    "python-ipware==3.0.0",
    "python3-openid==3.2.0",
    "python3-saml==1.16.0",
    "pyyaml==6.0.3",
    "qrcode[pil]==8.2",
    "rapidfuzz==3.13.0",
    "redis==6.4.0",
    "referencing==0.36.2",
    "requests==2.32.5",
    "rpds-py==0.27.1",
    "s3transfer==0.14.0",
    "sentry-sdk==2.43.0",
    "setuptools==80.9.0",
    "sgmllib3k==1.0.0",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "structlog==25.4.0",
    "tablib[xls,xlsx,yaml]==3.9.0",
    "tinycss2==1.4.0",
    "tinyhtml5==2.0.0",
    "tomli==2.3.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
    "urllib3==1.26.20",
    "wcwidth==0.2.14",
    "weasyprint==66.0",
    "webencodings==0.5.1",
    "whitenoise==6.11.0",
    "wrapt==1.17.3",
    "xlrd==2.0.2",
    "xlwt==1.3.0",
    "xmlsec==1.3.14",
    "zipp==3.23.0",
    "zopfli==0.2.3.post1",
]

[tool.uv.sources]
invoke = { git = "https://github.com/pyinvoke/invoke" }
[tool.setuptools]
py-modules = []
