[project]
name = "nixos-inventree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.0",
    "async-timeout==5.0.1",
    "attrs==25.4.0",
    "babel==2.17.0",
    "bcrypt==5.0.0",
    "bleach[css]==6.3.0",
    "blessed==1.25.0",
    "boto3==1.42.47",
    "botocore==1.42.47",
    "brotli==1.2.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cryptography==46.0.5",
    "cssselect2==0.8.0",
    "defusedxml==0.7.1",
    "django==5.2.11",
    "django-allauth[headless,mfa,openid,saml,socialaccount]==65.13.1",
    "django-anymail[amazon-ses,postal]==14.0",
    "django-cleanup==9.0.0",
    "django-cors-headers==4.9.0",
    "django-dbbackup==5.1.2",
    "django-error-report-2==0.4.2",
    "django-filter==25.2",
    "django-flags==5.1.0",
    "django-ical==1.9.2",
    "django-ipware==7.0.1",
    "django-js-asset==3.1.2",
    "django-mailbox==4.10.1",
    "django-maintenance-mode==0.22.0",
    "django-markdownify==0.9.6",
    "django-money==3.5.4",
    "django-mptt==0.18.0",
    "django-oauth-toolkit==3.2.0",
    "django-otp==1.3.0",
    "django-picklefield==3.4.0",
    "django-q-sentry==0.1.6",
    "django-q2==1.9.0",
    "django-recurrence==1.14",
    "django-redis==6.0.0",
    "django-sesame==3.2.3",
    "django-sql-utils==0.7.0",
    "django-sslserver==0.22",
    "django-stdimage==6.0.2",
    "django-storages[s3,sftp]==1.14.6",
    "django-structlog==10.0.0",
    "django-taggit==6.1.0",
    "django-xforwardedfor-middleware==2.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt[crypto]==5.5.1",
    "docutils==0.22.4",
    "drf-spectacular==0.29.0",
    "dulwich==1.0.0",
    "et-xmlfile==2.0.0",
    "feedparser==6.0.12",
    "fido2==2.1.1",
    "flexcache==0.3",
    "flexparser==0.4",
    "fonttools[woff]==4.61.1",
    "googleapis-common-protos==1.72.0",
    "grpcio==1.76.0",
    "gunicorn==25.0.3",
    "icalendar==6.3.2",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "inflection==0.5.1",
    "invoke==2.2.1",
    "isodate==0.7.2",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jwcrypto==1.5.6",
    "lxml==6.0.2",
    "markdown==3.10.2",
    "markupsafe==3.0.3",
    "oauthlib==3.3.1",
    "openpyxl==3.1.5",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp==1.39.1",
    "opentelemetry-exporter-otlp-proto-common==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
    "opentelemetry-instrumentation==0.60b1",
    "opentelemetry-instrumentation-dbapi==0.60b1",
    "opentelemetry-instrumentation-django==0.60b1",
    "opentelemetry-instrumentation-psycopg==0.60b1",
    "opentelemetry-instrumentation-pymysql==0.60b1",
    "opentelemetry-instrumentation-redis==0.60b1",
    "opentelemetry-instrumentation-requests==0.60b1",
    "opentelemetry-instrumentation-sqlite3==0.60b1",
    "opentelemetry-instrumentation-system-metrics==0.60b1",
    "opentelemetry-instrumentation-wsgi==0.60b1",
    "opentelemetry-proto==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "opentelemetry-util-http==0.60b1",
    "packaging==26.0",
    "paramiko==4.0.0",
    "pdf2image==1.17.0",
    "pillow==12.1.1",
    "pint==0.25.2",
    "pip>=26.0.1",
    "pip-licenses==5.5.0",
    "platformdirs==4.5.1",
    "ppf-datamatrix==0.2",
    "prettytable==3.17.0",
    "protobuf==6.33.5",
    "psutil==7.2.1",
    "py-moneyed==3.0",
    "pycparser==3.0",
    "pydyf==0.12.1",
    "pyjwt[crypto]==2.10.1",
    "pynacl==1.6.2",
    "pypdf==6.6.2",
    "pyphen==0.17.2",
    "python-barcode[images]==0.16.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-fsutil==0.16.0",
    "python-ipware==3.0.0",
    "python3-openid==3.2.0",
    "python3-saml==1.16.0",
    "pyyaml==6.0.3",
    "qrcode[pil]==8.2",
    "rapidfuzz==3.14.3",
    "redis==7.1.0",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rpds-py==0.30.0",
    "s3transfer==0.16.0",
    "sentry-sdk==2.52.0",
    "setuptools==80.10.2",
    "sgmllib3k==1.0.0",
    "six==1.17.0",
    "sqlparse==0.5.5",
    "structlog==25.5.0",
    "tablib[xls,xlsx,yaml]==3.9.0",
    "tinycss2==1.4.0",
    "tinyhtml5==2.0.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
    "wcwidth==0.6.0",
    "weasyprint==66.0",
    "webencodings==0.5.1",
    "whitenoise==6.11.0",
    "wrapt==1.17.3",
    "xlrd==2.0.2",
    "xlwt==1.3.0",
    "xmlsec==1.3.17",
    "zipp==3.23.0",
    "zopfli==0.4.0",
]

[tool.uv.sources]
invoke = { git = "https://github.com/pyinvoke/invoke" }
[tool.setuptools]
py-modules = []
